<resources>
    <string name="app_name">Daily Journal: My Secret Diary</string>
    <string name="next">Next</string>
    <string name="this_is_item_sample">This is item sample!</string>
    <string name="content_intro_1">Diary Journal</string>
    <string name="content_intro_2">Voice Diary</string>
    <string name="content_intro_3">Photo Diary</string>
    <string name="content_intro_4">Private Journal</string>
    <string name="title_intro_1">Log your days swiftly in your journal.</string>
    <string name="title_intro_2">Capture thoughts aloud in your voice journal.</string>
    <string name="title_intro_3">Save your photos and capture memorable moments.</string>
    <string name="title_intro_4">Preserve your memories and make them wonderful.</string>
    <string name="tv_continue">Continue</string>
    <string name="Permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="desc_activity_permission">This app needs permissions below to work properly</string>
    <string name="camera">Camera</string>
    <string name="allow_access_camera">Allow camera access</string>
    <string name="allow_access_record">Allow recording access</string>
    <string name="allow_access_lib">Allow library access</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="desc_warning_permission_dialog">You must allow all Permission to use this app with full feature.</string>
    <string name="header_warning_permission">Warning permission</string>
    <string name="Your_opinion_matter_to_us">Your Opinion Matter To Us!</string>
    <string name="we_d_greatly_appreciate_if_you_can_rate_us">If you enjoy this Daily Journal: My Secret Diary, would you mind rating us on the Google Play, then?</string>
    <string name="may_be_later">Not now</string>
    <string name="thank_u">Thank you!</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="please_give_rating">please give me a rating!</string>
    <string name="There_is_no_email">There is no email client installed.</string>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="Language">Language</string>
    <string name="rate">Rate</string>
    <string name="start">Start</string>
    <string name="settings">Setting</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Privacy policy</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="skip">Skip</string>
    <string name="set_your_password">Set your password</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="title_re_enter">Wrong password, please re-enter</string>
    <string name="security_questions">Security Questions</string>
    <string name="set_up_security_questions_in_case_you_forget_your_password">Set up security questions in case you forget your password.</string>
    <string name="your_question">Your question</string>
    <string name="your_question_1">What is your favorite color?</string>
    <string name="your_question_2">What is your favorite movie?</string>
    <string name="your_question_3">What is your favorite food?</string>
    <string name="please_enter_your_answer">Please enter your answer</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="Confirm_Your_Password">Confirm Your Password</string>
    <string name="change_name">Change name</string>
    <string name="theme">Theme</string>
    <string name="notification">Notification</string>
    <string name="set_time">Set time</string>
    <string name="repeat">Repeat</string>
    <string name="calender">Calender</string>
    <string name="photos">Photos</string>
    <string name="mine">Mine</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="select_your_diary_theme">Select your diary theme</string>
    <string name="later">Later</string>
    <string name="select">Select</string>
    <string name="every_day">Every day</string>
    <string name="time">Time</string>
    <string name="ok">OK</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="never">Never</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="tv_Monday">Monday</string>
    <string name="tv_Tuesday">Tuesday</string>
    <string name="tv_Wednesday">Wednesday</string>
    <string name="tv_Thursday">Thursday</string>
    <string name="tv_Friday">Friday</string>
    <string name="tv_Saturday">Saturday</string>
    <string name="tv_Sunday">Sunday</string>
    <string name="please_fill_in_valid_time">Please fill in valid time</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="start_typing_here">Start typing here...</string>
    <string name="how_you_feel_today">How you feel today ?</string>
    <string name="background">Background</string>
    <string name="reset">Reset</string>
    <string name="sounds">Sounds</string>
    <string name="record">Record</string>
    <string name="music">Music</string>
    <string name="text">Text</string>
    <string name="start_record">Start record</string>
    <string name="save_your_voice">Save your voice</string>
    <string name="diary_record">Diary-Record</string>
    <string name="title_edit_text_empty">Please enter a file name</string>
    <string name="ted_image_picker_image">Image</string>
    <string name="ted_image_picker_video">Video</string>
    <string name="ted_image_picker_image_video">Image/Video</string>
    <string name="ted_image_picker_album_all">All</string>
    <string name="ted_image_picker_empty">Empty</string>
    <string name="ted_image_picker_title">Photos</string>
    <string name="ted_image_picker_max_count">You can not add more</string>
    <string name="ted_image_picker_min_count">You have to choice images</string>
    <string name="ted_image_picker_partial_access_notice_fmt">You\'ve given access to a select number of %1$s</string>
    <string name="ted_image_picker_manage">Manage</string>
    <string name="all">All</string>
    <string name="ted_image_picker_select_more_photo_video_fmt">Select more %1$s</string>
    <string name="ted_image_picker_grant_full_access_photo_video_fmt">Grant full access %1$s</string>
    <string name="title_mess_notify">Go to diary writing schedule</string>
    <string name="premium">Premium</string>
    <string name="get_more_benefit_from_the_app">Get more benefit from the app!</string>
    <string name="upgrade">Upgrade</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="there_is_no_diary_for_this_date">There is no diary for this date</string>
    <string name="custom_color">Custom color</string>
    <string name="no_pictures_yet">No pictures yet</string>
    <string name="day_sun">SUN</string>
    <string name="day_mon">MON</string>
    <string name="day_tue">TUE</string>
    <string name="day_wed">WED</string>
    <string name="day_Thu">THU</string>
    <string name="day_fri">FRI</string>
    <string name="day_sat">SAT</string>
    <string name="do_want_to_save">Do you want to save this log entry?</string>
    <string name="no_photos_selected">No photos selected!</string>
    <string name="selected_photos_deleted">Selected photos deleted!</string>
    <string name="diary_entry_saved">Diary entry saved!</string>
    <string name="failed_to_save_diary_entry">Failed to save diary entry.</string>
    <string name="you_have_not_selected_any_background_yet">You have not selected any background yet.</string>
    <string name="audio_file_not_found">"Audio file not found!"</string>
    <string name="ted_image_picker_done"></string>
    <string name="day_concat">" "</string>
    <string name="begin_your_diary">Begin Your Diary</string>
    <string name="cherish_the_daily_moments_of_life">Cherish the daily moments of life</string>
    <string name="error_while_starting_recording">Error while starting recording</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="file_name_exists">File name already exists. Please choose another name.</string>
    <string name="unable_to_retrieve_file_path">Unable to retrieve file path</string>
    <string name="error_processing_the_file">Error processing the file</string>

    <string name="hello_user">Hello %s,</string>
    <string name="version_1_0_0">Version </string>
    <string name="warning_is_network">No Internet</string>
    <string name="please_internet">Please check your internet connection.</string>
    <string name="thank_you_for_rate_us">Thank you for rate us</string>
</resources>