<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <View
            android:layout_width="80dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@color/color_black" />

        <TextView
            android:id="@+id/tv_select_more_photo_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="8dp"
            tools:ignore="UnusedAttribute"
            tools:text="@string/ted_image_picker_select_more_photo_video_fmt" />

        <TextView
            android:id="@+id/tv_grant_full_access_photo_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            tools:ignore="UnusedAttribute"
            tools:text="@string/ted_image_picker_grant_full_access_photo_video_fmt" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/cancel"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

