<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_theme_0"
    android:paddingTop="25dp">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poltawski_nowy_700"
            android:gravity="center_horizontal"
            android:lines="1"
            android:text="@string/mine"
            android:textColor="@color/color_2E3338"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_item_premium"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/rl_top">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_700"
                android:text="@string/premium"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_premium" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout5"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/textView"
            android:fontFamily="@font/plus_jakarta_sans_400"
            android:text="@string/get_more_benefit_from_the_app"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_item_upgrade"
            android:fontFamily="@font/plus_jakarta_sans_600"
            android:includeFontPadding="false"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/upgrade"
            android:textColor="@color/color_white"
            android:textSize="14sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ver"
        app:layout_constraintTop_toBottomOf="@+id/item_premium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_border_setting"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp">

                    <TextView
                        android:id="@+id/tv_change_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/plus_jakarta_sans_400"
                        android:padding="10dp"
                        android:text="@string/change_name"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_change_name" />

                    <TextView
                        android:id="@+id/tv_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/plus_jakarta_sans_400"
                        android:padding="10dp"
                        android:text="@string/theme"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_theme" />

                    <TextView
                        android:id="@+id/tv_nofity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/plus_jakarta_sans_400"
                        android:padding="10dp"
                        android:text="@string/notification"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_notify" />

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/plus_jakarta_sans_400"
                        android:padding="10dp"
                        android:text="@string/password"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_password" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_border_setting"
                app:layout_constraintTop_toBottomOf="@+id/ll_setting">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp">

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/plus_jakarta_sans_400"
                        android:padding="10dp"
                        android:text="@string/Language"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/icon_language" />

                    <TextView
                        android:id="@+id/tv_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/plus_jakarta_sans_400"
                        android:padding="10dp"
                        android:text="@string/rate"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/icon_rate" />

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="@string/share"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/icon_share" />

                    <TextView
                        android:id="@+id/tv_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/plus_jakarta_sans_400"
                        android:padding="10dp"
                        android:text="@string/policy"
                        android:textColor="@color/color_2E3338"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/icon_policy" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/tv_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/rethink_sans_400"
        android:gravity="center"
        android:text="@string/version_1_0_0"
        android:textColor="#4A514F"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/fr_ads" />

    <FrameLayout
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>