<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/bg_border_btn_cancel"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_is_network"
            android:textColor="@color/color_373A3A"
            android:textSize="17sp"
            android:fontFamily="@font/plus_jakarta_sans_700"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:gravity="start"
            android:textColor="@color/color_373A3A"
            android:text="@string/please_internet"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/iv_ok_image"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17sp"
            android:layout_marginVertical="15sp"
            android:gravity="center"
            android:paddingVertical="13sp"
            android:text="@string/ok"
            android:fontFamily="@font/plus_jakarta_sans_700"
            android:background="@drawable/bg_colorapp_radius"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>