<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17sp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_warning_permission"
            android:fontFamily="@font/plus_jakarta_sans_500"
            android:textColor="@color/color_373A3A"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:gravity="start"
            android:fontFamily="@font/plus_jakarta_sans_400"
            android:textColor="#4A514F"
            android:text="@string/desc_warning_permission_dialog"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17sp"
            android:layout_marginVertical="15sp"
            android:background="@drawable/bg_button_color_app_circle"
            android:gravity="center"
            android:paddingVertical="13sp"
            android:text="@string/go_to_setting"
            android:textColor="@color/color_white"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>