<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:paddingTop="25dp">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="11dp"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poltawski_nowy_700"
            android:gravity="start"
            android:text="@string/security_questions"
            android:textColor="@color/color_373A3A"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_question"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_border_ques"
        app:layout_constraintTop_toBottomOf="@+id/rl_top">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:fontFamily="@font/plus_jakarta_sans_600"
            android:text="@string/your_question_1"
            android:textColor="#4A514F"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/plus_jakarta_sans_400"
        android:gravity="center"
        android:text="@string/please_enter_your_answer"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/ctl_question" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_answer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_border_answer"
        app:layout_constraintTop_toBottomOf="@+id/tv_3">

        <EditText
            android:id="@+id/edt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_transitsion"
            android:fontFamily="@font/plus_jakarta_sans_600"
            android:hint="@string/enter_your_answer"
            android:paddingHorizontal="18dp"
            android:textColor="#4A514F"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/plus_jakarta_sans_400"
        android:text="@string/wrong_answer"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="#FF2D46"
        app:layout_constraintTop_toBottomOf="@+id/ctl_answer" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fr_ads"
        android:layout_weight="1"
        android:background="@drawable/bg_border_btn_confirm"
        android:fontFamily="@font/plus_jakarta_sans_500"
        android:gravity="center"
        android:paddingHorizontal="41dp"
        android:includeFontPadding="false"
        android:paddingVertical="12dp"
        android:text="@string/confirm"
        android:textColor="#F4F5F5"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctl_answer" />

    <FrameLayout
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>